--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "url": "https://github.com/mmckegg/become/issues"
   },
   "devDependencies": {
-    "tape": "~1.0.4"
+    "tape": "~1.0.4",
+    "es5-shim": "*"
   },
   "testling": {
     "files": "test.js",
