--- a/package.json
+++ b/package.json
@@ -33,12 +33,11 @@
       "iexplore/6.0",
       "iexplore/7.0",
       "iexplore/8.0",
-      "iexplore/10.0",
       "iexplore/9.0",
-      "chrome/13.0",
+      "iexplore/latest",
+      "chrome/10.0",
       "chrome/20.0",
-      "chrome/24.0",
-      "chrome/25.0",
+      "chrome/latest",
       "firefox/3.0",
       "firefox/3.6",
       "firefox/5.0",
