--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "bugs": {
     "url": "https://github.com/mmckegg/become/issues"
   },
+  "dependencies": {
+    "elementize": "~0.0"
+  },
   "devDependencies": {
     "tape": "~1.1.1",
     "es5-shim": "*"
