option ot update inner instead of outer

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Transform target DOM elements to become incoming HTML",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "testling"
   },
   "repository": {
     "type": "git",
